[package]
name        = "sourcemap-resolver"
version     = "0.1.0"
edition     = "2021"
authors     = ["dalance@gmail.com"]
repository  = "https://github.com/veryl-lang/sourcemap-resolver"
license     = "MIT OR Apache-2.0"
readme      = "README.md"

[dependencies]
anyhow    = "1.0"
clap      = {version = "4.5", features = ["derive"]}
once_cell = "1.19"
regex     = "1.10"
sourcemap = "8.0"
thiserror = "1.0"
